<resources>
    <string name="app_name">My Application2</string>
    <string name="Arms">Arms</string>
    <string name="Ears">Ears</string>
    <string name="Eyebrows">Eyebrows</string>
    <string name="Eyes">Eyes</string>
    <string name="Glasses">Glasses</string>
    <string name="Hat">Hat</string>
    <string name="Mouth">Mouth</string>
    <string name="Mustache">Mustache</string>
    <string name="Nose">Nose</string>
    <string name="Shoes">Shoes</string>
</resources>
