<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dimitrivc.myapplication2.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/arms"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:visibility="invisible"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/arms" />

        <ImageView
            android:id="@+id/ears"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:visibility="invisible"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/eyebrows"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:visibility="invisible"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/eyes"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:visibility="invisible"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/glasses"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:visibility="invisible"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/hat"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:visibility="invisible"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/mouth"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:visibility="invisible"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/mustache"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:visibility="invisible"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/mustache" />

        <ImageView
            android:id="@+id/nose"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:visibility="invisible"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/nose" />

        <ImageView
            android:id="@+id/shoes"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:visibility="invisible"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/shoes" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/CB_Arms"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Arms"
            android:onClick="addArms"/>

        <CheckBox
            android:id="@+id/CB_Ears"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Ears"
            android:onClick="addEars"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/CB_Eyebrows"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Eyebrows"
            android:onClick="addEyebrows"/>

        <CheckBox
            android:id="@+id/CB_Eyes"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Eyes"
            android:onClick="addEyes"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/CB_Glasses"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Glasses"
            android:onClick="addGlasses"/>

        <CheckBox
            android:id="@+id/CB_Hat"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Hat"
            android:onClick="addHat"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/CB_Mouth"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Mouth"
            android:onClick="addMouth"/>

        <CheckBox
            android:id="@+id/CB_Mustache"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Mustache"
            android:onClick="addMustache"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/CB_Nose"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Nose"
            android:onClick="addNose"/>

        <CheckBox
            android:id="@+id/CB_Shoes"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Shoes"
            android:onClick="addShoes"/>
    </LinearLayout>

</LinearLayout>
